feat: add 2 handlers GetPositionCourses and PositionAssignCourses
