# internal/app/rest/position_handler.go
@@ -1,6 +1,7 @@
 package rest
 
 import (
+	"fmt"
 	"net/http"
 	"strconv"
 
@@ -20,7 +21,7 @@ import (
 //	@Failure	400		{object}	sErr
 //	@Failure	500		{object}	sErr
 //
-// @Security Bearer
+//	@Security	Bearer
 //
 //	@Router		/positions [post]
 func (r *RestServer) handlerCreatePosition(c *gin.Context) {
@@ -63,7 +64,7 @@ func (r *RestServer) handlerCreatePosition(c *gin.Context) {
 //	@Failure	404	{object}	sErr
 //	@Failure	500	{object}	sErr
 //
-// @Security Bearer
+//	@Security	Bearer
 //
 //	@Router		/positions/{id} [get]
 func (r *RestServer) handlerGetPosition(c *gin.Context) {
@@ -84,6 +85,47 @@ func (r *RestServer) handlerGetPosition(c *gin.Context) {
 	c.JSON(http.StatusOK, position)
 }
 
+// GetPositionCourses godoc
+//
+//	@Summary	Получение всех курсов привязанных к должности
+//	@Tags		position
+//	@Produce	json
+//	@Param		id	path		int	true	"Position ID"
+//	@Success	200	{object}	getPositionCoursesResponse
+//	@Failure	401	{object}	sErr
+//	@Failure	403	{object}	sErr
+//	@Failure	404	{object}	sErr
+//	@Failure	500	{object}	sErr
+//
+//	@Security	Bearer
+//
+//	@Router		/positions/{id}/courses [get]
+func (r *RestServer) handlerGetPositionCourses(c *gin.Context) {
+	ctx := c.Request.Context()
+
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil || id < 0 {
+		r.handleError(c, errs.ErrBadRequest)
+		return
+	}
+
+	courses, err := r.services.Position().GetPositionCourses(ctx, r.getUserSession(c).OrgID, id)
+	if err != nil {
+		r.handleError(c, err)
+		return
+	}
+
+	c.JSON(http.StatusOK, getPositionCoursesResponse{
+		PositionID: id,
+		CourseID:   courses,
+	})
+}
+
+type getPositionCoursesResponse struct {
+	PositionID int   `json:"position_id"`
+	CourseID   []int `json:"course_id"`
+}
+
 // GetPositions godoc
 //
 //	@Summary	Получение всех должностей
@@ -93,7 +135,7 @@ func (r *RestServer) handlerGetPosition(c *gin.Context) {
 //	@Failure	404	{object}	sErr
 //	@Failure	500	{object}	sErr
 //
-// @Security Bearer
+//	@Security	Bearer
 //
 //	@Router		/positions [get]
 func (r *RestServer) handlerGetPositions(c *gin.Context) {
@@ -120,7 +162,7 @@ func (r *RestServer) handlerGetPositions(c *gin.Context) {
 //	@Failure	404		{object}	sErr
 //	@Failure	500		{object}	sErr
 //
-// @Security Bearer
+//	@Security	Bearer
 //
 //	@Router		/positions/update/{id} [patch]
 func (r *RestServer) handlerUpdatePosition(c *gin.Context) {
@@ -152,18 +194,18 @@ func (r *RestServer) handlerUpdatePosition(c *gin.Context) {
 	c.JSON(http.StatusOK, position)
 }
 
-// @Summary	Присвоение курса к должности
-// @Accept		json
-// @Tags		position
-// @Produce	json
-// @Success	200
-// @Failure	400	{object}	error	"Неверный формат запроса"
-// @Failure	401	{object}	error	"Пользователь не является сотрудником компании"
-// @Failure	500	{object}	error	"Внутренняя ошибка сервера"
+//	@Summary	Присвоение курса к должности
+//	@Accept		json
+//	@Tags		position
+//	@Produce	json
+//	@Success	200
+//	@Failure	400	{object}	error	"Неверный формат запроса"
+//	@Failure	401	{object}	error	"Пользователь не является сотрудником компании"
+//	@Failure	500	{object}	error	"Внутренняя ошибка сервера"
 //
-// @Security Bearer
+//	@Security	Bearer
 //
-// @Router		/positions/course [post]
+//	@Router		/positions/course [post]
 
 func (r *RestServer) handlerAssignCourse(c *gin.Context) {
 	positionCourse := model.PositionCourse{}
@@ -182,4 +224,56 @@ func (r *RestServer) handlerAssignCourse(c *gin.Context) {
 	}
 
 	c.Status(http.StatusOK)
+}
+
+// @Summary	Присвоение нескольких курсов к должности
+// @Accept		json
+// @Tags		position
+// @Produce	json
+// @Param		id		path		int							true	"Position ID"
+// @Param		object	body		model.PositionAssignCourses	true	"Courses"
+// @Success	200		{object}	assignCoursesResponse
+// @Failure	400		{object}	sErr	"Неверный формат запроса"
+// @Failure	401		{object}	sErr	"Пользователь не является сотрудником компании"
+// @Failure	500		{object}	sErr	"Внутренняя ошибка сервера"
+//
+// @Security	Bearer
+//
+// @Router		/positions/{id}/courses [patch]
+func (r *RestServer) handlerAssignCourses(c *gin.Context) {
+	ctx := c.Request.Context()
+
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil || id < 0 {
+		r.handleError(c, errs.ErrBadRequest)
+		return
+	}
+
+	var body model.PositionAssignCourses
+	if err := c.ShouldBindJSON(&body); err != nil {
+		r.handleError(c, errs.ErrInvalidRequest)
+		return
+	}
+
+	if err := body.Validation(); err != nil {
+		r.handleError(c, err)
+		return
+	}
+
+	err = r.services.Position().AssignCourses(ctx, id, body.CourseID, r.getUserSession(c).UserID)
+	if err != nil {
+		fmt.Println(err)
+		r.handleError(c, err)
+		return
+	}
+
+	c.JSON(http.StatusOK, assignCoursesResponse{
+		CourseID:   body.CourseID,
+		PositionID: id,
+	})
+}
+
+type assignCoursesResponse struct {
+	PositionID int   `json:"position_id"`
+	CourseID   []int `json:"course_id"`
 }
